<resources>
    <string name="app_name">News Reader</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">filter</string>
    <string name="search">Search</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">SAVE</string>
    <string name="search_filter">Search Filter</string>
    <string name="news_desk_value">News Desk Value</string>
    <string name="arts">Arts</string>
    <string name="sort_order">Sort Order</string>
    <string name="begin_date">begin_date</string>
</resources>