<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <TextView
        android:id="@+id/tv_begin_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/begin_date"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_begin_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="20170918"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_begin_date" />

    <TextView
        android:id="@+id/tv_sort_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/sort_order"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_begin_date_value" />

    <Spinner
        android:id="@+id/spinner_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sort_order" />

    <TextView
        android:id="@+id/tv_new_desk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/news_desk_value"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sort" />

    <CheckBox
        android:id="@+id/checkbox_art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/arts"
        app:layout_constraintStart_toStartOf="@+id/tv_new_desk"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_desk" />

    <CheckBox
        android:id="@+id/checkbox_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fashion_style"
        app:layout_constraintStart_toStartOf="@+id/checkbox_art"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_art" />

    <CheckBox
        android:id="@+id/checkbox_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sports"
        app:layout_constraintStart_toStartOf="@+id/checkbox_fashion"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_fashion" />

    <TextView
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_sport" />

</android.support.constraint.ConstraintLayout>